# spotify-info

./: Cargo.toml  flake.nix
src/: main.bak.rs  main.rs
