[package]
name = "spotify-info"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
rspotify = { version = "0.15.3", default-features = false, features = ["cli", "client-ureq", "ureq-rustls-tls"] }
