[package]
name = "spotify-info"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.10"
log = "0.4.29"
rspotify = { version = "0.16.1", default-features = false, features = ["cli", "client-ureq", "ureq-rustls-tls"] }
